--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>mrhmr</title>
+    <title>梗图小组</title>
   </head>
   <body>
-    mrhmr的网站！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！
+    <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216"<a href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a>
+    
+    点击上方加入小组
   </body>
 </html>
