--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>梗图小组</title>
-  </head>
-  <body>
-    <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216"<a href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a>
-    
-    点击上方加入小组
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>梗图小组</title>
+  <body bgcolor="7ac2f4">
+</head>
+<body>
+  <div>
+    <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216" href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a><br>点击上方加入小组
+  </div>
+</body>
 </html>
