--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
   <div>
-    <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216" href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a><br>点击上方加入小组
-     <br><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" />
+    <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216" href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a>
+    <br><font size="2">点上面图片加入本小组</font>
+    <br><br><a href="image/download/all pictures.zip">点击我下载所有梗图</a>
+    <br><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" />
+    
   </div>
 </body>
 </html>
