--- a/all pictures.html
+++ b/all pictures.html
@@ -8,26 +8,28 @@
     <div>
         <a href="index.html"><font size="2">返回</font></a>
         <br><br><br> 1.<br><img src="image/all/1.PNG">
-        <br><br> 2.<br><img src="image/all/2.PNG">
+        <br><br> 2.<br><img src="image/all/2.png">
         <br><br> 3.<br><img src="image/all/3.PNG">
         <br><br> 4.<br><img src="image/all/4.PNG">
         <br><br> 5.<br><img src="image/all/5.PNG">
         <br><br> 6.<br><img src="image/all/6.PNG">
-        <br><br> 7.<br><img src="image/all/7.PNG">
+        <br><br> 7.<br><img src="image/all/7.png">
         <br><br> 8.<br><img src="image/all/8.PNG">
         <br><br> 9.<br><img src="image/all/9.PNG">
-        <br><br>10.<br><img src="image/all/10.PNG">
-        <br><br>11.<br><img src="image/all/11.PNG">
-        <br><br>12.<br><img src="image/all/12.PNG">
-        <br><br>13.<br><img src="image/all/13.PNG">
-        <br><br>14.<br><img src="image/all/14.PNG">
-        <br><br>15.<br><img src="image/all/15.PNG">
-        <br><br>16.<br><img src="image/all/16.PNG">
-        <br><br>17.<br><img src="image/all/17.PNG">
-        <br><br>18.<br><img src="image/all/18.PNG">
-        <br><br>19.<br><img src="image/all/19.PNG">
-        <br><br>20.<br><img src="image/all/20.PNG">
-        <br><br>21.<br><img src="image/all/21.PNG">
+        <br><br>10.<br><img src="image/all/10.png">
+        <br><br>11.<br><img src="image/all/11.png">
+        <br><br>12.<br><img src="image/all/12.png">
+        <br><br>13.<br><img src="image/all/13.png">
+        <br><br>14.<br><img src="image/all/14.png">
+        <br><br>15.<br><img src="image/all/15.png">
+        <br><br>16.<br><img src="image/all/16.png">
+        <br><br>17.<br><img src="image/all/17.png">
+        <br><br>18.<br><img src="image/all/18.png">
+        <br><br>19.<br><img src="image/all/19.png">
+        <br><br>20.<br><img src="image/all/20.png">
+        <br><br>21.<br><img src="image/all/21.png">
+        <br><br><a href="image/download/all pictures.zip">点击我下载所有梗图</a>
+        <br><br><br><font size="2">已有</font><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" /><font size="2">浏览过</font>
     </div>
 </body>
 </html>
