--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216" href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a>
     <br><font size="2">点上面图片加入本小组</font>
     <br><br>mcbbs梗图是由<a href="https://www.mcbbs.net/home.php?mod=space&uid=3993788">lovemcbest</a>创建的系列
-    <br>里面都是mcbbs的梗图，深受大家欢迎，以下是部分图片,<a href="all pictures.html">全部图片点这儿</a>
+    <br>里面都是mcbbs的梗图，深受大家欢迎，以下是部分图片,<a href="all pictures.html">全部图片点这儿</a>,<a href="random.html">随机图片点这儿</a>
     <br><img src="image/all/1.png" /><img src="image/all/3.png" /><img src="image/all/4.png" />
     <br><br><a href="image/download/all pictures.zip">点击我下载所有梗图</a>
     <br><br><br><font size="2">已有</font><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" /><font size="2">浏览过</font>
