--- a/all pictures.html
+++ b/all pictures.html
@@ -29,7 +29,7 @@
         <br><br>20.<br><img src="image/all/20.png">
         <br><br>21.<br><img src="image/all/21.png">
         <br><br><a href="image/download/all pictures.zip">点击我下载所有梗图</a>
-        <br><br><br><font size="2">已有</font><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" /><font size="2">浏览过</font>
+        <br><br><font size="2">已有</font><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" /><font size="2">浏览过</font>
     </div>
 </body>
 </html>
