--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <br><br><font size="4">mcbbs梗图是由</font><a href="https://www.mcbbs.net/home.php?mod=space&uid=3993788"><font size="4">lovemcbest</font></a><font size="4"></font>创建的系列</font>
     <br><font size="4">里面都是mcbbs的梗图，深受大家欢迎，以下是部分图片,</font><a href="all pictures.html"><font size="4">全部图片点这儿</font></a>,<a href="random.html"><font size="4">随机图片点这儿</font></a>
-    <br><br><img src="image/all/1.png" /><img src="image/all/3.png" /><img src="image/all/4.png" />
+    <br><br><img src="image/all/1.PNG" /><img src="image/all/3.PNG" /><img src="image/all/4.PNG" />
     <br><marquee width="90%" behavior="alternate" scrollamount="3"><font size="4">希望大家多多支持</font></marquee><br />
     <br><br><a href="image/download/all pictures.zip">点击我下载所有梗图</a>
     <br><font size="2">已有</font><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" /><font size="2">浏览过</font>
