--- a/all pictures.html
+++ b/all pictures.html
@@ -28,6 +28,8 @@
         <br><br>19.<br><img src="image/all/19.png" width="100%">
         <br><br>20.<br><img src="image/all/20.png" width="100%">
         <br><br>21.<br><img src="image/all/21.png" width="100%">
+        <br><br>22.<br><img src="image/all/22.PNG" width="100%">
+        <br><br>23.<br><img src="image/all/23.PNG" width="100%">
         <br><br><a href="image/download/all pictures.zip">点击我下载所有梗图</a>
         <br><br><font size="2">已有</font><img src="https://badges.toozhao.com/badges/01GPR1CRZRP3D6TMKVNYJJ93VF/blue.svg" /><font size="2">浏览过</font>
     </div>
