--- a/free/index.html
+++ b/free/index.html
@@ -3,6 +3,6 @@
 <title>free key!</title>
 </head>
 <body>
-<iframe src="https://player.bilibili.com/player.html?aid=80433022&bvid=BV1GJ411x7h7&cid=137649199&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
-<font size=5><br>你被骗了！</font>
+<iframe src="https://player.bilibili.com/player.html?aid=80433022&bvid=BV1GJ411x7h7&cid=137649199&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" width="100%" height="80%"> </iframe>
+<font size=10><br>你被骗了!</font>
 </body>
