--- a/mcbbs/index.html
+++ b/mcbbs/index.html
@@ -12,6 +12,7 @@
     
     <br><br><font size="4">mcbbs梗图是由</font><a href="https://www.mcbbs.net/home.php?mod=space&uid=3993788"><font size="4">lovemcbest</font></a><font size="4">创建的系列,里面都是mcbbs的梗图，深受大家欢迎</font>
     <br><font size="4">现在一共更新了8个，其中浏览量最高的是</font><a href="https://www.mcbbs.net/thread-1412854-1-1.html"><font size="4">mcbbs梗图1.0</font></a>
+    <br><font size="4">MCBBS梗图系列还有一个wiki，</font><a href="https://mcbbs.wiki/wiki/MCBBS%E6%A2%97%E5%9B%BE%E7%B3%BB%E5%88%97"><font size="4">点击此处查看！</font></a>
     <br><font size="4">现在已发布21张梗图，以下是部分图片,</font><a href="all pictures.html"><font size="4">全部图片点这儿</font></a>,<a href="random.html"><font size="4">随机图片点这儿</font></a>
     <br><br><img src="https://mcbbs.wiki/images/memes/50.webp" width="100%" /><img src="https://mcbbs.wiki/images/memes/52.webp" width="100%" /><img src="https://www.mcbbs.wiki/images/memes/53.webp" width="100%" />
     <br><marquee width="90%" behavior="alternate" scrollamount="3"><font size="4">希望大家多多支持</font></marquee><br />
