--- a/mcbbs/beta/all pictures.html
+++ b/mcbbs/beta/all pictures.html
@@ -1,12 +1,17 @@
 <html>
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <title>梗图小组所有图片</title>
-  
 </head>
 <body bgcolor="7ac2f4">
+    <tbody>
+        <div align="center">
+            <h1>欢迎来到mcbbs梗图官方网站！</h1>
+            <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216" href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a>
+            <br><font size="2">点上面图片加入本小组</font>
+            <br><h2><a href="index.html">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="all pictures.html">所有图片</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="random.html">随机图片</a>
+    </tbody>
     <div>
-        <a href="index.html"><font size="2">返回</font></a>
         <br><br><br> 1.<br><img src="https://mcbbs.wiki/images/memes/50.webp" width="100%">
         <br><br> 2.<br><img src="https://mcbbs.wiki/images/memes/51.webp" width="100%">
         <br><br> 3.<br><img src="https://mcbbs.wiki/images/memes/52.webp" width="100%">
@@ -35,3 +40,4 @@
     </div>
 </body>
 </html>
+（此为beta版本，如有不足请指出）
