--- a/mcbbs/beta/random.html
+++ b/mcbbs/beta/random.html
@@ -8,7 +8,7 @@
     <tbody>
         <div align="center">
             <h1>欢迎来到mcbbs梗图官方网站！</h1>
-            <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216" href="https://smms.app/image/nkh4doQ6yHVEPNO" target="_blank"><img src="https://s2.loli.net/2023/01/06/nkh4doQ6yHVEPNO.png" alt="logo.png"></a></a>
+            <a href="https://www.mcbbs.net/forum.php?mod=group&action=join&fid=2216"><a href="https://imgse.com/i/pC24mo4"><img src="https://s1.ax1x.com/2023/07/10/pC24mo4.png" alt="pC24mo4.png" border="0" /></a></a>
             <br><font size="2">点上面图片加入本小组</font>
             <br><h2><a href="index.html">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="all pictures.html">所有图片</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="random.html">随机图片</a>
     </tbody>
